<resources>
    <string name="app_name">StickItToEm</string>
    <string name="stickers">Stickers</string>
    <string name="send_the_sticker">send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_stickers_sent">Total Stickers Sent</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up">Sign Up</string>
    <string name="name"> Name</string>
    <string name="email"> Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="already_have_an_account">Already have an account? \n\n Click here</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sticker">sticker</string>
    <string name="don_t_have_an_account_n_click_here">Don\'t have an account?\n\nClick Here!</string>
    <string name="sign_out">Sign Out</string>
    <string name="total_times_sent">Total Times Sent:</string>
    <string name="textview">TextView</string>
    <string name="contacts">Contacts</string>
    <string name="chat">Chat</string>
    <string name="history">History</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email_username">Email</string>
    <string name="sign_in">SIGN IN</string>
    <string name="msg_token_fmt">token</string>
    <string name="done">Done</string>
</resources>