<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="14dp">

    <TextView
        android:id="@+id/receiver_name_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#037BCD"
        android:hint="@string/name"
        android:paddingStart="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/message_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/sticker_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sticker_btn"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:background="#075EEF"
        android:backgroundTint="#075EEF"
        android:text="@string/stickers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_recycler_view"
        app:layout_constraintVertical_bias="0.932"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/send_btn"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/send_the_sticker"
        android:src="@drawable/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toEndOf="@+id/sticker_btn"
        app:layout_constraintTop_toBottomOf="@+id/message_recycler_view"
        app:layout_constraintVertical_bias="0.993"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/send_the_sticker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_btn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>


